--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.graphql-java-calculator'
-version = '0.2-beta'
+version = '0.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
