--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,14 @@ repositories {
     mavenLocal()
 }
 
+apply plugin: 'groovy'
+
 dependencies {
     compile group: 'com.graphql-java', name: 'graphql-java', version: '16.1'
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.1.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testImplementation 'org.codehaus.groovy:groovy-all:2.5.13'
 }
 
 java {
