--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.graphql-java-calculator'
-version = '1.0-beta-1'
+version = '1.0.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -30,6 +30,11 @@ java {
 
 javadoc {
     options.encoding = 'UTF-8'
+}
+
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 }
 
 publishing {
@@ -72,75 +77,65 @@ publishing {
             def releaseUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
             url = version.endsWith('SNAPSHOT') ? snapshotUrl : releaseUrl
             credentials {
-                username =  System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD")
+                username =  'OSS_USER_NAME'
+                password = 'OSS_PASSWORD'
             }
         }
     }
 }
 
-//apply plugin: 'signing'
-//
-//task javadocJar(type: Jar) {
-//    classifier = 'javadoc'
-//    from javadoc
-//}
-//
-//task sourcesJar(type: Jar) {
-//    classifier = 'sources'
-//    from sourceSets.main.allSource
-//}
-//
-//artifacts {
-//    archives javadocJar, sourcesJar
-//}
-//
-//signing {
-//    sign configurations.archives
-//}
-//
-//uploadArchives {
-//    repositories {
-//        mavenDeployer {
-//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-//            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                authentication(userName: '', password: '')
-//            }
-//
-//            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-//                authentication(userName: '', password: '')
-//            }
-//
-//            pom.project {
-//                name 'graphql-java-calculator'
-//                packaging 'jar'
-//                // optionally artifactId can be defined here
-//                artifactId = 'graphql-java-calculator'
-//                description 'graphql-java-calculator'
-//                url = 'https://github.com/dugenkui03/graphql-java-calculator'
-//
-//                licenses {
-//                    license {
-//                        name = 'The Apache License, Version 2.0'
-//                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                    }
-//                }
-//
-//                scm {
-//                    connection = 'scm:git:https://github.com/dugenkui03/graphql-java-calculator.git'
-//                    developerConnection = 'scm:git:https://github.com/dugenkui03/graphql-java-calculator.git'
-//                    url = 'https://github.com/dugenkui03/graphql-java-calculator'
-//                }
-//
-//                developers {
-//                    developer {
-//                        id = 'dugenkui'
-//                        name = 'dugenkui'
-//                        email = 'dugk@foxmail.com'
-//                    }
-//                }
-//            }
-//        }
-//    }
-//}
+apply plugin: 'signing'
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: 'OSS_USER_NAME', password: 'OSS_PASSWORD')
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: 'OSS_USER_NAME', password: 'OSS_PASSWORD')
+            }
+
+            pom.project {
+                name 'graphql-java-calculator'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                artifactId = 'graphql-java-calculator'
+                description 'graphql-java-calculator'
+                url = 'https://github.com/dugenkui03/graphql-java-calculator'
+
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                scm {
+                    connection = 'scm:git:https://github.com/dugenkui03/graphql-java-calculator.git'
+                    developerConnection = 'scm:git:https://github.com/dugenkui03/graphql-java-calculator.git'
+                    url = 'https://github.com/dugenkui03/graphql-java-calculator'
+                }
+
+                developers {
+                    developer {
+                        id = 'dugenkui'
+                        name = 'dugenkui'
+                        email = 'dugk@foxmail.com'
+                    }
+                }
+            }
+        }
+    }
+}
