--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.caching=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 
-signing.keyId= 0x2CDC1180
-signing.password= du01gen04
-signing.secretKeyRingFile=/Users/dugenkui/.gnupg/secring.gpg
+signing.keyId=
+signing.password= 
+signing.secretKeyRingFile=
 
-ossrhUsername=dugk
-ossrhPassword=@Kongtiao123
+ossrhUsername=
+ossrhPassword=
