--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,10 +16,10 @@ jobs:
           java-version: 1.8
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Publish package
-        run: gradle publish --info
-        env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          BINTRAY_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
-          BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
+#      - name: Publish package
+#        run: gradle publish --info
+#        env:
+#          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+#          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+#          BINTRAY_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
+#          BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
