refactor expression for expansibility

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.caching=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 
-signing.keyId=
-signing.password= 
+signing.keyId=keyId
+signing.password= password
 signing.secretKeyRingFile=
 
-ossrhUsername=
-ossrhPassword=
+ossrhUsername=ossrhUsername
+ossrhPassword=ossrhPassword
