--- a/build.gradle
+++ b/build.gradle
@@ -77,8 +77,8 @@ publishing {
             def releaseUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
             url = version.endsWith('SNAPSHOT') ? snapshotUrl : releaseUrl
             credentials {
-                username =  ''
-                password = ''
+                username =  'username'
+                password = 'password'
             }
         }
     }
@@ -100,11 +100,11 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: '', password: '')
+                authentication(userName: 'userName', password: 'password')
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: '', password: '')
+                authentication(userName: 'userName', password: 'password')
             }
 
             pom.project {
