--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 apply plugin: 'groovy'
 
 dependencies {
-    compile group: 'com.graphql-java', name: 'graphql-java', version: '16.2'
+    compile group: 'com.graphql-java', name: 'graphql-java', version: '17.0-beta1'
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.2.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
