--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ apply plugin: 'groovy'
 dependencies {
     compile group: 'com.graphql-java', name: 'graphql-java', version: '17.2'
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.2.1'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.35'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
+    compileOnly 'org.jetbrains:annotations:23.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.13'
