--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ apply plugin: 'groovy'
 
 dependencies {
     compile group: 'com.graphql-java', name: 'graphql-java', version: '19.2'
+    compile group: 'com.graphql-java', name: 'graphql-java-extended-scalars', version: '19.1'
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.3.3'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '2.0.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -78,7 +79,7 @@ publishing {
             def releaseUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
             url = version.endsWith('SNAPSHOT') ? snapshotUrl : releaseUrl
             credentials {
-                username =  'username'
+                username = 'username'
                 password = 'password'
             }
         }
