--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'com.graphql-java-calculator'
-version = '1.0.5-SNAPSHOT'
+group = 'com.luckincoffee'
+version = '3.0.0'
 
 repositories {
     mavenCentral()
@@ -41,13 +41,14 @@ compileJava {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifactId = 'graphql-java-calculator'
+            artifactId = 'lk-graphql-java-calculator'
             from components.java
 
             pom {
-                name = 'graphql-java-calculator'
-                description = 'graphql-java-calculator'
-                url = 'https://github.com/dugenkui03/graphql-java-calculator'
+                name = 'lk-graphql-java-calculator'
+                description = 'lk-graphql-java-calculator'
+                version = '2.0.5-SNAPSHOT'
+                url = 'https://github.com/wsamuel/graphql-calculator/'
 
                 licenses {
                     license {
@@ -63,9 +64,9 @@ publishing {
                     }
                 }
                 scm {
-                    connection = 'scm:git:https://github.com/dugenkui03/graphql-java-calculator.git'
-                    developerConnection = 'scm:git:https://github.com/dugenkui03/graphql-java-calculator.git'
-                    url = 'https://github.com/dugenkui03/graphql-java-calculator'
+                    connection = 'scm:git:https://github.com/wsamuel/graphql-calculator.git'
+                    developerConnection = 'scm:git:https://github.com/wsamuel/graphql-calculator.git'
+                    url = 'https://github.com/wsamuel/graphql-calculator'
                 }
             }
         }
@@ -78,8 +79,8 @@ publishing {
             def releaseUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
             url = version.endsWith('SNAPSHOT') ? snapshotUrl : releaseUrl
             credentials {
-                username =  'username'
-                password = 'password'
+                username =  'G4yJGto6'
+                password = '4V7qoF0akBafGny9IBYJOkvx3Ez0QfyTYEMaZjayw+K4'
             }
         }
     }
