--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ signing.keyId=keyId
 signing.password= password
 signing.secretKeyRingFile=
 
-ossrhUsername=ossrhUsername
-ossrhPassword=ossrhPassword
+ossrhUsername=G4yJGto6
+ossrhPassword=4V7qoF0akBafGny9IBYJOkvx3Ez0QfyTYEMaZjayw+K4
